# Sentinel-C

./: CMakeLists.txt  README.md
src/: banner.cpp  banner.h  cli.cpp  cli.h  database.cpp  database.h  hasher.cpp  hasher.h  main.cpp  scanner.cpp  scanner.h  security.cpp  security.h  utils.cpp  utils.h
